appointment-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-api-service 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appoitment-api-service
  template:
    metadata:
      labels:
        app: appointment-api-service
    spec:
      containers:
      - name: patient-api-service
        image: poseidon2022/appointmentservice
        ports:
        - containerPort: 80
